Hopefully fix some problems with 'bringToBack' of census data rectangles pulling them behind englewood neighborhood outline and making them uninteractable

--- a/src/css/analytics.less
+++ b/src/css/analytics.less
@@ -109,6 +109,10 @@ html {
   z-index: 0;
 }
 
+.geoJSON-englewoodOutline {
+  pointer-events: none;
+}
+
 .geoJSON-gridSpace:hover {
   // fill-opacity: 0;
   stroke-opacity: 1;
